--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.0.0
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.0.1
     restart: unless-stopped
     tty: true
     mem_limit: 1G
@@ -96,13 +96,13 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.0.9
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.0.10
     restart: unless-stopped
     tty: true
     mem_limit: 64M
     environment:
       - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
-      - VERSION=5.0.0-EA
+      - VERSION=5.0.0-beta45
       - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID=${KEYCLOAK_WEB_CLIENT_ID}
@@ -111,7 +111,7 @@ services:
 
 
   workflow:
-    image: registry.libriciel.fr/public/signature/workflow:1.5.6
+    image: registry.libriciel.fr/public/signature/workflow:1.5.7
     restart: unless-stopped
     tty: true
     mem_limit: 768M
@@ -169,7 +169,7 @@ services:
 
 
   legacy-bridge:
-    image: registry.libriciel.fr/public/signature/legacy-bridge:1.2.1
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.2.2
     restart: unless-stopped
     tty: true
     mem_limit: 512M
