--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -204,7 +204,10 @@ tolerant-e2e-tests-deploy:
   stage: e2e-tests
   needs:
     #    must repeat package here because extends overwrites instead of merge properties
-    - package
+    - job: package
+      optional: true
+    - job: package_prod
+      optional: true
     - strict-e2e-tests-test
   only: [ develop ]
   allow_failure: false
