--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,6 +119,11 @@ package:
 
 publish:
   stage: publish
+  needs:
+    - job: package
+      optional: true
+    - job: package_prod
+      optional: true
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
