--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -290,7 +290,10 @@ tolerant-e2e-tests-test:
     REPORT_NAME: "Karate - tests tolerant"
     KARATE_ADDITIONAL_TAGS: "--tags @@demo-simple-bde "
   needs: [ tolerant-e2e-tests-deploy ]
-  only: [ develop ]
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
+      when: never
+    - when: on_success
   allow_failure: true
 
 # </editor-fold desc="E2e tests">
