WIP: ajout des dossiers créées, signés et récupérés de l'entité @formats-de-signature

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -257,6 +257,7 @@ dev-deploy:
     when: always
     name: ${REPORT_NAME}
     paths:
+      - build/ip5-folders
       - build/karate-reports
 
 strict-e2e-tests-test:
