Use a global mail_from variable

--- a/.env.dist
+++ b/.env.dist
@@ -24,6 +24,8 @@ APPLICATION_HOST=iparapheur.dom.local
 CERTIFICATE_FULLCHAIN_PATH=./data/nginx/ssl/fullchain.pem
 CERTIFICATE_PRIVKEY_PATH=./data/nginx/ssl/privkey.pem
 
+MAIL_FROM=ne-pas-repondre@dom.local
+
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=root
