--- a/src/main/resources/nginx/iparapheur.ipng.conf.template
+++ b/src/main/resources/nginx/iparapheur.ipng.conf.template
@@ -141,8 +141,8 @@ server {
   }
 
  location /ipng {
-   proxy_set_header X-Forwarded-Host $host:$server_port;
-   proxy_set_header X-Forwarded-Server $host;
+   # proxy_set_header X-Forwarded-Host $host:$server_port;
+   # proxy_set_header X-Forwarded-Server $host;
    proxy_pass http://up_ipng/ipng;
  }
 
