--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -270,6 +270,7 @@ dev-deploy:
     - ./gradlew test -Dkarate.options="${KARATE_ADDITIONAL_TAGS}" -Dkarate.headless=true -Dkarate.baseUrl="https://${E2E_TESTS_TARGET_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
   after_script:
     - folders="${REPORT_NAME}-`date +%Y%m%d-%H%M%S`.zip" && zip -r "${folders}" "build/ip5-folders" && url=`curl -s -T "./${folders}" "https://curl.libriciel.fr/${folders}"` && echo "${url}" > "build/url.txt" && echo "Test result folders available ${url}"
+    - python3 src/scripts/karate-tests-fixme-ip-tag.py
   artifacts:
     when: always
     name: ${REPORT_NAME}
@@ -281,7 +282,7 @@ strict-e2e-tests-test:
   extends: [ .e2e-tests ]
   variables:
     REPORT_NAME: "Karate - tests strict"
-    KARATE_ADDITIONAL_TAGS: "--tags @demo-simple-bde,@metadonnees --tags ~@fixme-ip --tags ~@ignore --tags ~@ip4 "
+    KARATE_ADDITIONAL_TAGS: "--tags @demo-simple-bde,@formats-de-signature,@legacy-bridge,@metadonnees --tags ~@fixme-ip --tags ~@ignore --tags ~@ip4 "
   needs:
     - job: strict-e2e-tests-deploy
       optional: true
@@ -291,7 +292,7 @@ tolerant-e2e-tests-test:
   extends: [ .e2e-tests ]
   variables:
     REPORT_NAME: "Karate - tests tolerant"
-    KARATE_ADDITIONAL_TAGS: "--tags @demo-simple-bde,@metadonnees --tags ~@ip4  --tags ~@ignore "
+    KARATE_ADDITIONAL_TAGS: "--tags @demo-simple-bde,@formats-de-signature,@legacy-bridge,@metadonnees --tags ~@ip4  --tags ~@ignore "
   needs: [ tolerant-e2e-tests-deploy ]
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
