appropriate protocol for keycloak token check from ipng

--- a/src/main/resources/ipng/application.properties
+++ b/src/main/resources/ipng/application.properties
@@ -24,7 +24,7 @@ keycloak.credentials.secret=${KEYCLOAK_CLIENT_SECRET}
 
 keycloak-admin-client.client-id=ipcore-web
 ipng.public-auth-server-url=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}/auth
-keycloak.auth-server-url=${KEYCLOAK_AUTH_PROTOCOL}://${KEYCLOAK_HOST}:${KEYCLOAK_PORT}/auth
+keycloak.auth-server-url=http://${KEYCLOAK_HOST}:${KEYCLOAK_PORT}/auth
 keycloak.disable-trust-manager=true
 
 
