--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -267,7 +267,8 @@ dev-deploy:
     LANG: fr_FR.UTF-8
   stage: e2e-tests
   script:
-    - apt-get update && apt-get install --assume-yes --no-install-recommends --show-upgraded libpoppler102=20.09.0-3.1 libxml2-utils=2.9.10+dfsg-6.7+deb11u2 locales=2.31-13+deb11u4 locales-all=2.31-13+deb11u4 python3-pip=20.3.4-4+deb11u1 poppler-utils=20.09.0-3.1 xmlsec1=1.2.31-1 zip=3.0-12 && pip3 install jsonpath-ng==1.5.3 Pillow==9.2.0 PyPDF2==2.10.0 && locale-gen fr_FR.UTF-8
+    - set -eo pipefail
+    - apt-get update && apt-get install --assume-yes --no-install-recommends --show-upgraded libpoppler102=20.09.* libxml2-utils=2.9.* locales=2.31-* locales-all=2.31-* python3-pip=20.3.* poppler-utils=20.09.* xmlsec1=1.2.* zip=3.0-12 && pip3 install jsonpath-ng==1.5.3 Pillow==9.2.0 PyPDF2==2.10.0 && locale-gen fr_FR.UTF-8
     - echo "Test ${CI_COMMIT_REF_NAME} deployed on ${E2E_TESTS_TARGET_SERVER_URL} with Karate - These tests mustn't fail"
     - ./gradlew test -Dkarate.options="${KARATE_ADDITIONAL_TAGS}" -Dkarate.headless=true -Dkarate.baseUrl="https://${E2E_TESTS_TARGET_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
     - python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt
