Fusion du gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,9 @@ stages:
   - package
   - publish
   - deploy
-  - e2e-tests
+  - e2e-tests-strict
+  - deploy-tolerant-tests
+  - e2e-tests-tolerant
 
 variables:
   NIGHTLY:
@@ -194,7 +196,7 @@ publish:
 
 strict-e2e-tests-deploy:
   extends: [ .deploy-job ]
-  stage: e2e-tests
+  stage: deploy
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
@@ -211,7 +213,7 @@ strict-e2e-tests-deploy:
 
 tolerant-e2e-tests-deploy:
   extends: [ .deploy-job ]
-  stage: e2e-tests
+  stage: deploy-tolerant-tests
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
       when: never
@@ -284,6 +286,7 @@ dev-deploy:
 
 strict-e2e-tests-test:
   extends: [ .e2e-tests ]
+  stage: e2e-tests-strict
   variables:
     REPORT_NAME: "Karate - tests strict"
     KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags @demo-simple-bde,@formats-de-signature,@legacy-bridge,@metadonnees --tags ~@fixme-ip5 --tags ~@ignore "
@@ -294,6 +297,7 @@ strict-e2e-tests-test:
 
 tolerant-e2e-tests-test:
   extends: [ .e2e-tests ]
+  stage: e2e-tests-tolerant
   variables:
     REPORT_NAME: "Karate - tests tolerant"
     KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags @demo-simple-bde,@formats-de-signature,@legacy-bridge,@metadonnees --tags ~@ignore "
